--- a/package.json
+++ b/package.json
@@ -21,5 +21,18 @@
   "devDependencies": {
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0"
-  }
+  },
+  "dependencies": {
+    "babel-jest": "^27.2.0",
+    "jest": "^27.2.0"
+  },
+  "jest": {
+    "moduleFileExtensions": ["js", "jsx"],
+    "moduleDirectories": ["node_modules", "bower_components", "shared"],
+
+    "moduleNameMapper": {
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
+    }
+}
 }
