--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This will be a virtual game of Battleship built using test driven development for The Odin Project curriculum. I will utilize Jest and WebPack as some tools to get this project off and running.",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/jest ./src",
     "build": "webpack build --config webpack.config.js --watch"
   },
   "repository": {
@@ -19,7 +19,11 @@
   },
   "homepage": "https://github.com/nickfrahm/Battleship#readme",
   "devDependencies": {
-    "webpack": "^5.52.1",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
+    "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
@@ -27,12 +31,18 @@
     "jest": "^27.2.0"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "jsx"],
-    "moduleDirectories": ["node_modules", "bower_components", "shared"],
-
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "bower_components",
+      "shared"
+    ],
     "moduleNameMapper": {
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
       "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
     }
-}
+  }
 }
