testing the basics of ship function (hit, isSunk).

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "./node_modules/.bin/jest ./src",
-    "build": "webpack build --config webpack.config.js --watch"
+    "build": "webpack build --config webpack.config.js"
   },
   "repository": {
     "type": "git",
